--- a/project.json
+++ b/project.json
@@ -13,13 +13,14 @@
     "UiPath.PDF.Activities": "[3.24.0]",
     "UiPath.System.Activities": "[25.10.0]",
     "UiPath.Testing.Activities": "[25.10.0]",
-    "UiPath.UIAutomation.Activities": "[25.10.16]"
+    "UiPath.UIAutomation.Activities": "[25.10.16]",
+    "UiPath.Word.Activities": "[2.3.1]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "25.10.0.0",
-  "projectVersion": "1.0.1",
+  "projectVersion": "1.0.2",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
